Fix bugs in UpdateEvent component. Fix nav header css to make text align properly.

--- a/src/AdminPage/css/navbar.css
+++ b/src/AdminPage/css/navbar.css
@@ -10,9 +10,8 @@ margin-bottom: 30px;
 
 #nav-header {
 color: white;
-font-size: 50px;
 font-weight: 100;
-margin-left: 150px;
+margin-left: 100px;
 margin-top: 17px;
 font-family: 'alwaysforever', sans-serif;
 }
