--- a/src/EventsPage/css/header.css
+++ b/src/EventsPage/css/header.css
@@ -11,7 +11,7 @@
   color: white;
   font-size: 30px;
   font-weight: 100;
-  margin-left: 150px;
+  margin-left: 10px;
   font-family: 'The Girl Next Door', cursive;
 }
 
