--- a/src/common/css/navbar.css
+++ b/src/common/css/navbar.css
@@ -5,14 +5,13 @@
 .navbar {
   padding-top: 10px;
   padding-bottom: 10px;
-  /*z-index: 1000; position:relative;*/
 }
 
 #nav-header {
   color:white ;
-  font-size: 0.05em;
+  font-size: 30px;
   font-weight: 0;
-  margin-left: 150px;
+  margin-left: 100px;
   margin-top: 17px;
   font-family: 'alwaysforever', sans-serif;
 }
